--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,8 @@
     <title>React App</title>
   </head>
   <body>
+      <div id="fb-root"></div>
+      <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&autoLogAppEvents=1&version=v4.0&appId=386533352056000"></script>
     <noscript>
       You need to enable JavaScript to run this app.
     </noscript>
@@ -36,5 +38,15 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <div id="google_translate_element"></div>
+
+      <script type="text/javascript">
+      function googleTranslateElementInit() {
+        new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+      }
+      </script>
+
+      <script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+      <div class="fb-comments" data-href="http://localhost:3000/" data-width="" data-numposts="5"></div>
   </body>
 </html>
